--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,15 +7,15 @@ theme:
   features: 
     - tabs
 nav:
-  - Guides:
-    - Introduction: 'index.md'
+  - Introduction: 'index.md'
   # - Security:
   #   - Introduction: 'index.md'
   - 1 - Cost Optimizations:
     - Introduction: 'cost_optimization/introduction.md'
     - Best Practices: 'cost_optimization/best_practices.md'
   - 2 - Reliability:
-    - Home: 'reliability/introduction.md'
+    - Introduction: 'reliability/introduction.md'
+    - Best Practices: 'reliability/best_practices.md'    
     # - Introduction: 'index.md'
   # - Performance:
   #   - Introduction: 'index.md'
