--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,13 +14,13 @@ nav:
   - 2 - Reliability:
     - Introduction: 'reliability/introduction.md'
     - Best Practices: 'reliability/best_practices.md'   
-  - 3 - Security: 
-    - Introduction: 'security/introduction.md'
-    - Best Practices: 'security/best_practices.md'      
+  # - 3 - Security: 
+  #   - Introduction: 'security/introduction.md'
+  #   - Best Practices: 'security/best_practices.md'      
   # - 4 - Performance Efficiency: 'index.md'
   # - 5 - Operational Excellence: 'index.md'
-  - 4 - Applications:
-    - Spark: 'applications/spark/index.md'
+  # - 4 - Applications:
+  #   - Spark: 'applications/spark/index.md'
     # - Hive: 'index.md'      
     # - Introduction: 'index.md'
   # - Performance:
