--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,8 +21,10 @@ nav:
     - 4.1 - Managed Scaling: 'features/managed_scaling/best_practices.md'          
   # - 4 - Performance Efficiency: 'index.md'
   # - 5 - Operational Excellence: 'index.md'
-  # - 4 - Applications:
-  #   - Spark: 'applications/spark/index.md'
+  - 5 - Applications:
+      - 5.1 Spark:
+        - Introduction: 'applications/spark/introduction.md'
+        - Best Practices: 'applications/spark/best_practices.md'
     # - Hive: 'index.md'      
     # - Introduction: 'index.md'
   # - Performance:
