--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,7 +18,8 @@ nav:
     - Introduction: 'security/introduction.md'
     - Best Practices: 'security/best_practices.md'    
   - 4 - Features: 
-    - 4.1 - Managed Scaling: 'features/managed_scaling/best_practices.md'          
+    - 4.1 - Managed Scaling: 'features/managed_scaling/best_practices.md'     
+    - 4.2 - Spot Usage: 'features/spot_usage/best_practices.md'              
   # - 4 - Performance Efficiency: 'index.md'
   # - 5 - Operational Excellence: 'index.md'
   - 5 - Applications:
