--- a/website/package.json
+++ b/website/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@docusaurus/core": "^3.5.2",
+    "@docusaurus/plugin-google-analytics": "^3.6.1",
     "@docusaurus/preset-classic": "^3.5.2",
     "@docusaurus/theme-search-algolia": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
